# ai-dev-openapi-mcp-server

./: .env.example  README.md  claude_desktop_config.example.json  pyproject.toml  slides-5.md
src/ai-dev-openapi_mcp_server/: __init__.py  cli.py  llm_backends.py  server.py  spec_loader.py
src/ai_dev_openapi_mcp_server/: api_client.py  cli.py  server.py  spec_loader.py
tests/: test_spec_loader.py
